--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -48,12 +48,17 @@ jobs:
         run: cat app/local.properties
       - name: Assembling release apk
         run: ./gradlew clean :app:assembleFullRelease -s -i -Pci=true
+      - name: Assembling release wear
+        run: ./gradlew :wear:assembleFullRelease -s -i -Pci=true
       - name: Path print
         run: ls -la app/build/outputs/apk/full && ls -la app/build/outputs/apk/full/release && ls -la app/
       - uses: actions/upload-artifact@v3
         with:
           name: AAPS apk
-          path: /home/runner/work/AndroidAPS/AndroidAPS/app/build/outputs/apk/full/release/app-full-release.apk
+          path:
+            /home/runner/work/AndroidAPS/AndroidAPS/app/build/outputs/apk/full/release/app-full-release.apk
+            /home/runner/work/AndroidAPS/AndroidAPS/wear/full/release/wear-full-release.apk
+            /home/runner/work/AndroidAPS/AndroidAPS/wear/full/release/*.json
       - name: Send mail
         uses: dawidd6/action-send-mail@v3
         with:
