Using absolute paths for grabbing artifacts

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -47,7 +47,7 @@ jobs:
     #  - name: print vars
     #    run: cat app/local.properties
       - name: Assembling release apk
-        run: ./gradlew clean :app:assembleFullRelease -s -i -Pci=true
+        run: ./gradlew :app:assembleFullRelease -s -i -Pci=true
       - name: Assembling release wear
         run: ./gradlew :wear:assembleFullRelease -s -i -Pci=true
       - name: Path print
@@ -56,11 +56,11 @@ jobs:
           && ls -la wear/build/outputs/apk/full/release
       - uses: actions/upload-artifact@v3
         with:
-          name: AAPS apk
+          name: AAPS apks
           path:
-            app/build/outputs/apk/full/release/app-full-release.apk
-            wear/build/outputs/apk/full/release/wear-full-release.apk
-            wear/build/outputs/apk/full/release/output-metadata.json
+            /home/runner/work/AndroidAPS/AndroidAPS/app/build/outputs/apk/full/release/app-full-release.apk
+            /home/runner/work/AndroidAPS/AndroidAPS/wear/build/outputs/apk/full/release/wear-full-release.apk
+            /home/runner/work/AndroidAPS/AndroidAPS/wear/build/outputs/apk/full/release/output-metadata.json
       - name: Send mail
         uses: dawidd6/action-send-mail@v3
         with:
