UTF encoding added ind gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -33,3 +33,5 @@ android.nonTransitiveRClass=true
 # https://youtrack.jetbrains.com/issue/KT-58027
 kapt.use.jvm.ir=false
 android.nonFinalResIds=true
+systemProp.file.encoding=UTF-8
+JAVA_OPTS=-Dfile.encoding=UTF-8
