--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,15 +26,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: oNaiPs/secrets-to-env-action@v1
         with:
           secrets: ${{ toJSON(secrets) }}
-      - name: set up JDK 17
-        uses: actions/setup-java@v3
+      - name: set up JDK 21
+        uses: actions/setup-java@v4
         with:
-          java-version: '17'
-          distribution: 'adopt-openj9'
+          java-version: '21'
+          distribution: 'temurin'
           cache: gradle
       - name: Injecting keystore
         run: echo "$KEYSTORE" | base64 -d > app/keystore.jks &&  echo "$KEYSTORE" | base64 -d > wear/keystore.jks
